...
            state.query,
            { onSearch(it, state.language) },
            text(AppText.SEARCH),
            singleLine = true
        )
        AppChoiceGroup(
            listOf("", "Kotlin", "Java"),
            state.language,
            { onSearch(state.query, it) },
            label = { if (it.isEmpty()) text(AppText.ALL_LANGUAGES) else it }
        )
    }
}
...
